--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,31 @@
+ {
+     box-sizing: border-box;
+ }
+img {
+
+    display: block;
+}
+ body {
+     margin: 16px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     -webkit-font-smoothing: antialiased;
+     -moz-osx-font-smoothing: grayscale;
+     background-color: #fafafa;
+     color: #212121;
+     line-height: 1.5;
+ }
+
 .gallery {
     display: flex;
-        width: 1440px;
+      width: 1128px;
         height: 696px;
         padding: 24px 156px;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         gap: 24px;
         flex-wrap: wrap;
-        padding: 24px 156px;
         margin: 0;
 }
 .gallery> li>a>img{
@@ -18,10 +35,8 @@
         
         
 }
-.gallery>li {
-    width: 360px;
-        height: 200px;
-}
+
+
 ul,
 li {
     margin: 0;
